# runes-lightning-dev

./: .gitignore  LICENSE  README.md  RESEARCH.txt  docker-compose.yml  package.json  project.md  requirements.txt  setup_git.ps1
docker/: .gitkeep
go-lightning/: .gitkeep  go.mod  main.go
plugins/: .gitkeep
rust-rune/: .gitkeep  Cargo.toml
rust-rune/src/: main.rs  ord_client.rs  rune_parser.rs  settlement.rs
specs/: .gitkeep
webpage/: docs.html  docs.js  index.html  script.js  style.css
