[package]
name = "rust-rune"
version = "0.1.0"
edition = "2021"
authors = ["Runes over Lightning Initiative (ROL)"]
description = "Rust tools for Rune parsing, indexing, and ord client integration"
license = "MIT"
repository = "https://github.com/Runes-over-Lightning-Initiative-ROL/runes-lightning-dev"

[dependencies]
# Bitcoin and blockchain
bitcoin = "0.32.0"
bitcoin_hashes = "0.12.0"
bitcoin_ser = "0.32.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Ordinals and Runes
ord = "0.18.0"
runestone = "0.18.0"

# Network and HTTP
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

# CLI and utilities
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"

# Database (for indexing)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

# Async runtime
futures = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Crypto
secp256k1 = "0.28"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4" 